@@ -1,3 +1,6 @@
+[B]Version 1.2.4[/B]
+- Widget updates and fixes
+
 [B]Version 1.2.3[/B]
 - Add RDS support
 
